Fixed carousel bottom item buttons wrapping issue.

--- a/src/templates/carousel/css/carousel.css
+++ b/src/templates/carousel/css/carousel.css
@@ -62,6 +62,7 @@
 }
 .fg-carousel-bottom {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: center;
     position: relative;
